change header/footer backgroud color: fix color contrast warning

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     height: 3.25rem;
-    background: peru;
+    background:darkolivegreen;
     display: grid;
     place-content: center;
     margin-top: auto;
