--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,6 +1,6 @@
 header {
     height: 3.25rem;
-    background: peru;
+    background: darkolivegreen;
     display: grid;
     place-content: center;
     color: #fff;
