--- a/style/general.css
+++ b/style/general.css
@@ -20,7 +20,7 @@ img {
 
 header {
   height: 3.25rem;
-  background: peru;
+  background: darkolivegreen;
   display: grid;
   place-content: center;
   color: #fff;
@@ -33,7 +33,7 @@ header {
 }
 footer {
   height: 3.25rem;
-  background: peru;
+  background: darkolivegreen;
   display: grid;
   place-content: center;
   margin-top: auto;
